--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link type="text/css" rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@1,200&display=swap" rel="stylesheet">
+</head>
 
 <body>
     <h1>Password Validation</h1>
